# pyeauidf

./: .gitignore  README.md  pyproject.toml  renovate.json5
.github/workflows/: pr.yml  publish.yml
pyeauidf/: __init__.py  __main__.py  client.py
tests/: test_client.py
