[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeauidf"
dynamic = ["version"]
description = "Python client for L'eau d'Ile-de-France (SEDIF) water consumption data"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Timothy", email = "6560631+TimoPtr@users.noreply.github.com" }]
keywords = ["water", "consumption", "sedif", "ile-de-france", "home-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
dependencies = ["aiohttp>=3.9", "certifi"]

[project.urls]
Homepage = "https://github.com/TimoPtr/pyeauidf"
Repository = "https://github.com/TimoPtr/pyeauidf"
Issues = "https://github.com/TimoPtr/pyeauidf/issues"

[project.scripts]
pyeauidf = "pyeauidf.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "aioresponses", "ruff", "mypy"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
    "D203", # no-blank-line-before-class (incompatible with formatter)
    "D212", # multi-line-summary-first-line (incompatible with formatter)
    "D105", # missing docstring in magic method (standard protocol methods)
    "COM812", # incompatible with formatter
    "ISC001", # incompatible with formatter
    "EM101",  # exception message string literal (overly pedantic)
    "EM102",  # exception message f-string literal (overly pedantic)
    "TRY003", # long messages in raise (overly pedantic)
    "TCH001", # move stdlib import into TYPE_CHECKING (adds complexity)
    "TCH002", # move third-party import into TYPE_CHECKING (adds complexity)
    "RET504", # unnecessary assignment before return (used for mypy type narrowing)
]

[tool.ruff.lint.per-file-ignores]
"pyeauidf/__main__.py" = ["T201"]
"tests/**" = ["S101", "SLF001", "D"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.mypy]
python_version = "3.14"
strict = true

[tool.setuptools_scm]

[tool.setuptools.package-data]
pyeauidf = ["gandi_intermediate.pem"]
